RESOLVED FIXED 123682
LLVM assertion failures should funnel into WTF's crash handling
https://bugs.webkit.org/show_bug.cgi?id=123682
Summary LLVM assertion failures should funnel into WTF's crash handling
Filip Pizlo
Reported 2013-11-02 12:19:23 PDT
Patch forthcoming.
Attachments
the patch (12.65 KB, patch)
2013-11-02 12:25 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2013-11-02 12:25:06 PDT
Created attachment 215826 [details] the patch
WebKit Commit Bot
Comment 2 2013-11-02 12:27:22 PDT
Attachment 215826 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source/JavaScriptCore/llvm/InitializeLLVM.cpp', u'Source/JavaScriptCore/llvm/InitializeLLVMPOSIX.cpp', u'Source/JavaScriptCore/llvm/library/LLVMExports.cpp', u'Source/JavaScriptCore/llvm/library/LLVMOverrides.cpp', u'Source/JavaScriptCore/llvm/library/LLVMTrapCallback.h', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/Assertions.cpp', u'Source/WTF/wtf/Assertions.h', u'Tools/ChangeLog', u'Tools/Scripts/configure-llvm']" exit_code: 1 Source/WTF/wtf/Assertions.h:41: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/llvm/library/LLVMOverrides.cpp:28: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2013-11-02 14:08:51 PDT
Comment on attachment 215826 [details] the patch r=me
Filip Pizlo
Comment 4 2013-11-02 18:33:16 PDT
Note You need to log in before you can comment on or make changes to this bug.