Source/JavaScriptCore/llvm/InitializeLLVM.cpp
@@ -35,22 +35,9 @@ namespace JSC {
 
 static pthread_once_t initializeLLVMOnceKey = PTHREAD_ONCE_INIT;
 
-static NO_RETURN_DUE_TO_CRASH void llvmCrash(const char* reason)
-{
-    WTFLogAlways("LLVM failure: %s", reason);
-    CRASH();
-}
-
-static void initializeLLVMOnce()
-{
-    initializeLLVMImpl();
-    
-    llvm->InstallFatalErrorHandler(llvmCrash);
-}
-
 void initializeLLVM()
 {
-    pthread_once(&initializeLLVMOnceKey, initializeLLVMOnce);
+    pthread_once(&initializeLLVMOnceKey, initializeLLVMImpl);
 }
 
 } // namespace JSC
